--- a/index.html
+++ b/index.html
@@ -11,36 +11,36 @@
     <section>
         <div class="earth"></div>
         <div class="circle">
-            <span style="--i:1;">G</span>
-            <span style="--i:2;">u</span>
-            <span style="--i:3;">a</span>
-            <span style="--i:4;">r</span>
-            <span style="--i:5;">d</span>
-            <span style="--i:6;">a</span>
-            <span style="--i:7;">-</span>
-            <span style="--i:8;">C</span>
-            <span style="--i:9;">o</span>
-            <span style="--i:10;">m</span>
-            <span style="--i:11;">e</span>
-            <span style="--i:12;">-</span>
-            <span style="--i:13;">S</span>
-            <span style="--i:14;">t</span>
-            <span style="--i:15;">o</span>
-            <span style="--i:16;">-</span>
-            <span style="--i:17;">G</span>
-            <span style="--i:18;">i</span>
-            <span style="--i:19;">r</span>
-            <span style="--i:20;">a</span>
+            <span style="--i:1;">L</span>
+            <span style="--i:2;">o</span>
+            <span style="--i:3;">o</span>
+            <span style="--i:4;">k</span>
+            <span style="--i:5;">-</span>
+            <span style="--i:6;">H</span>
+            <span style="--i:7;">o</span>
+            <span style="--i:8;">w</span>
+            <span style="--i:9;">-</span>
+            <span style="--i:10;">I</span>
+            <span style="--i:11;">-</span>
+            <span style="--i:12;">a</span>
+            <span style="--i:13;">m</span>
+            <span style="--i:14;">-</span>
+            <span style="--i:15;">S</span>
+            <span style="--i:16;">p</span>
+            <span style="--i:17;">i</span>
+            <span style="--i:18;">n</span>
+            <span style="--i:19;">n</span>
+            <span style="--i:20;">i</span>
             <span style="--i:21;">n</span>
-            <span style="--i:22;">d</span>
-            <span style="--i:23;">o</span>
-            <span style="--i:24;">-</span>
-            <span style="--i:25;">i</span>
-            <span style="--i:26;">r</span>
-            <span style="--i:27;">a</span>
+            <span style="--i:22;">g</span>
+            <span style="--i:23;">-</span>
+            <span style="--i:24;">a</span>
+            <span style="--i:25;">r</span>
+            <span style="--i:26;">o</span>
+            <span style="--i:27;">u</span>
             <span style="--i:28;">n</span>
             <span style="--i:29;">d</span>
-            <span style="--i:30;">o</span>
+            <span style="--i:30;">-</span>
             <span style="--i:31;">-</span>
         </div>
     </section>
